Depricated Base and some value of main class changed